# persistence_demos

./: CMakeLists.txt  README.md
com_hijack/: README.md
com_hijack/src/: CMakeLists.txt  main.cpp  resource.rc  sysutil.cpp
extension_hijack/: CMakeLists.txt  README.md
extension_hijack/hijacker_app/src/: CMakeLists.txt  ext_hijacker.cpp  ext_hijacker.h  main.cpp  res_dropper.cpp  res_dropper.h  resource.rc
extension_hijack/proxy_app/src/: CMakeLists.txt  main.cpp
restricted_directory/: README.md
restricted_directory/src/: CMakeLists.txt  install.cpp  install.h  main.cpp  resource.h  resource.rc
shim_persist/: README.md
shim_persist/src/: CMakeLists.txt  elevate.cpp  elevate.h  main.cpp  my_shim.sdb  resource.rc  run.bat
